[feat] login + regiter: fix jumping header footer

--- a/src/pages/loginPage/loginPage.css
+++ b/src/pages/loginPage/loginPage.css
@@ -67,7 +67,7 @@
 	display: flex;
 	position: relative;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 	align-self: center;
 	width: 50%;
 	padding: 1rem 2rem;
@@ -267,5 +267,9 @@
 @media (width <= 80rem) {
 	.form__footer {
 		gap: 0.1rem;
+	}
+
+	.login__form {
+		padding: 0 2rem;
 	}
 }
